--- a/index.html
+++ b/index.html
@@ -1,114 +1,158 @@
 <!DOCTYPE html>
 <html lang="ru">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/style.css" />
+    <title>WebStudio</title>
+  </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HW_1</title>
-</head>
-
-<body>
+  <body>
     <header>
-        <nav>
-            <a href="./index.html">WebStudio</a>
+      <nav>
+        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
 
-            <ul>
-                <li> <a href="">Студия</a> </li>
-                <li> <a href="">Портфолио</a> </li>
-                <li> <a href="">Контакты</a> </li>
-            </ul>
-        </nav>
-        <ul>
-            <li> <a href="mailto:info@devstudio.com">info@devstudio.com</a> </li>
-            <li> <a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul class="nav-head">
+          <li><a href="/index.html">Студия</a></li>
+          <li><a href="/portfolio.html">Портфолио</a></li>
+          <li><a href="">Контакты</a></li>
         </ul>
-
+      </nav>
+      <address>
+        <ul class="address-head">
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
-        <div>
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
-            </section>
-        </div>
-        <section>
-            <ul>
-                <li>
-                    <h2>Внимание к деталям</h2>
-                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-                </li>
-                <li>
-                    <h2>Пунктуальность</h2>
-                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-                </li>
-                <li>
-                    <h2>Планирование</h2>
-                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-                </li>
-                <li>
-                    <h2>Современные технологии</h2>
-                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-                </li>
-            </ul>
-
-            <h3>Чем мы занимаемся</h3>
-            <ul>
-                <li><img src="./img/img.jpg" width="370" alt="формирование скелета проекта"></li>
-                <li><img src="./img/img2.jpg" width="370" alt="адаптация проекта"></li>
-                <li><img src="./img/img3.jpg" width="370" alt="дизайн проекта"></li>
-            </ul>
-
+      <div>
+        <section class="section-hero">
+          <h1>
+            Эффективные решения<br />
+            для вашего бизнеса
+          </h1>
+          <button type="button">Заказать услугу</button>
         </section>
+      </div>
+      <section class="section-what-doing">
+        <ul>
+          <li>
+            <h2 class="h-class">Внимание к деталям</h2>
+            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li>
+            <h2 class="h-class">Пунктуальность</h2>
+            <p>
+              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li>
+            <h2 class="h-class">Планирование</h2>
+            <p>
+              Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li>
+            <h2 class="h-class">Современные технологии</h2>
+            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
 
-        <section>
-            <h3>Наша команда</h3>
-            <ul>
-                <li>
-                    <img src="./img/img4.jpg" width="270" alt="фотография члена команды 1">
-                    <h4>Игорь Демьяненко</h4>
-                    <p>Product Designer</p>
-                </li>
-                <li>
-                    <img src="./img/img5.jpg" width="270" alt="фотография члена команды 2">
-                    <h4>Ольга Репина</h4>
-                    <p>Frontend Developer</p>
-                </li>
-                <li>
-                    <img src="./img/img6.jpg" width="270" alt="фотография члена команды 3">
-                    <h4>Frontend Developer</h4>
-                    <p>Marketing</p>
-                </li>
-                <li>
-                    <img src="./img/img7.jpg" width="270" alt="фотография члена команды 4">
-                    <h4>Михаил Ермаков</h4>
-                    <p>UI Designer</p>
-                </li>
-            </ul>
+        <h3 class="h-class-h3">Чем мы занимаемся</h3>
+        <ul>
+          <li>
+            <img
+              src="./img/doing-section/img.jpg"
+              width="370"
+              height="294"
+              alt="формирование скелета проекта"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/doing-section/img1.jpg"
+              width="370"
+              height="294"
+              alt="адаптация проекта"
+            />
+          </li>
+          <li>
+            <img src="./img/doing-section/img2.jpg" width="370" height="294" alt="дизайн проекта" />
+          </li>
+        </ul>
+      </section>
 
-        </section>
-
+      <section class="our-team">
+        <h3 class="h-class-h3">Наша команда</h3>
+        <ul>
+          <li class="list-item">
+            <img
+              src="./img/our-team/img4.jpg"
+              width="270"
+              height="260"
+              alt="фотография члена команды 1"
+            />
+            <h4 class="h-class">Игорь Демьяненко</h4>
+            <p>Product Designer</p>
+          </li>
+          <li class="list-item">
+            <img
+              src="./img/our-team/img5.jpg"
+              width="270"
+              height="260"
+              alt="фотография члена команды 2"
+            />
+            <h4 class="h-class">Ольга Репина</h4>
+            <p>Frontend Developer</p>
+          </li>
+          <li class="list-item">
+            <img
+              src="./img/our-team/img6.jpg"
+              width="270"
+              height="260"
+              alt="фотография члена команды 3"
+            />
+            <h4 class="h-class">Frontend Developer</h4>
+            <p>Marketing</p>
+          </li>
+          <li class="list-item">
+            <img
+              src="./img/our-team/img7.jpg"
+              width="270"
+              height="260"
+              alt="фотография члена команды 4"
+            />
+            <h4 class="h-class">Михаил Ермаков</h4>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
-    <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
-
-            <ul>
-                <li><a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т
-                        Леси Украинки, 26</a>
-                </li>
-                <li>
-                    <a class="link" href="mailto:info@devstudio.com">info@example.com</a>
-                </li>
-                <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
-                </li>
-            </ul>
-
-        </address>
+    <footer class="footer">
+      <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+      <address>
+        <ul class="address-foot">
+          <li>
+            <a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li>
+            <a class="link" href="mailto:info@devstudio.com">info@example.com</a>
+          </li>
+          <li>
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
     </footer>
-
-</body>
-
+  </body>
 </html>
