--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <a class="logo" href="./index.html"><span>Web</span>Studio</a>
 
         <ul class="nav-head">
-          <li><a href="/index.html">Студия</a></li>
-          <li><a href="/portfolio.html">Портфолио</a></li>
+          <li><a href="./index.html">Студия</a></li>
+          <li><a href="./portfolio.html">Портфолио</a></li>
           <li><a href="">Контакты</a></li>
         </ul>
       </nav>
