--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-1.jpg"
+                src="./img/portfolio-exapmles/img-1.jpg"
                 alt="пример работы 1"
                 width="370"
                 height="294"
@@ -53,7 +53,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-2.jpg"
+                src="./img/portfolio-exapmles/img-2.jpg"
                 alt="пример работы 2"
                 width="370"
                 height="294"
@@ -65,7 +65,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-3.jpg"
+                src="./img/portfolio-exapmles/img-3.jpg"
                 alt="пример работы 3"
                 width="370"
                 height="294"
@@ -77,7 +77,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-4.jpg"
+                src="./img/portfolio-exapmles/img-4.jpg"
                 alt="пример работы 4"
                 width="370"
                 height="294"
@@ -89,7 +89,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-5.jpg"
+                src="./img/portfolio-exapmles/img-5.jpg"
                 alt="пример работы 5"
                 width="370"
                 height="294"
@@ -101,7 +101,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-6.jpg"
+                src="./img/portfolio-exapmles/img-6.jpg"
                 alt="пример работы 6"
                 width="370"
                 height="294"
@@ -113,7 +113,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-7.jpg"
+                src="./img/portfolio-exapmles/img-7.jpg"
                 alt="пример работы 7"
                 width="370"
                 height="294"
@@ -125,7 +125,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-8.jpg"
+                src="./img/portfolio-exapmles/img-8.jpg"
                 alt="пример работы 8"
                 width="370"
                 height="294"
@@ -137,7 +137,7 @@
           <li>
             <a href="">
               <img
-                src="/img/portfolio-exapmles/img-9.jpg"
+                src="./img/portfolio-exapmles/img-9.jpg"
                 alt="пример работы 9"
                 width="370"
                 height="294"
