--- a/index.html
+++ b/index.html
@@ -16,56 +16,56 @@
   <body>
     <header>
       <nav>
-        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="logo" href="./index.html">Web<span class="logo-color">Studio</span></a>
 
-        <ul class="nav-head">
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="./portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul>
+          <li><a class="nav-head" href="./index.html">Студия</a></li>
+          <li><a class="nav-head" href="./portfolio.html">Портфолио</a></li>
+          <li><a class="nav-head" href="">Контакты</a></li>
         </ul>
       </nav>
       <address>
-        <ul class="address-head">
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <ul>
+          <li><a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="address" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <div>
         <section class="section-hero">
-          <h1>
+          <h1 class="section-hero-title">
             Эффективные решения<br />
             для вашего бизнеса
           </h1>
-          <button type="button">Заказать услугу</button>
+          <button class="section-hero-button" type="button">Заказать услугу</button>
         </section>
       </div>
       <section class="section-what-doing">
         <ul>
           <li>
-            <h2 class="h-class">Внимание к деталям</h2>
+            <h2 class="what-doing-title">Внимание к деталям</h2>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
           <li>
-            <h2 class="h-class">Пунктуальность</h2>
+            <h2 class="what-doing-title">Пунктуальность</h2>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
           <li>
-            <h2 class="h-class">Планирование</h2>
+            <h2 class="what-doing-title">Планирование</h2>
             <p>
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
           <li>
-            <h2 class="h-class">Современные технологии</h2>
+            <h2 class="what-doing-title">Современные технологии</h2>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
         </ul>
 
-        <h3 class="h-class-h3">Чем мы занимаемся</h3>
+        <h3 class="biggest-title">Чем мы занимаемся</h3>
         <ul>
           <li>
             <img
@@ -90,46 +90,46 @@
       </section>
 
       <section class="our-team">
-        <h3 class="h-class-h3">Наша команда</h3>
+        <h3 class="biggest-title">Наша команда</h3>
         <ul>
-          <li class="list-item">
+          <li class="our-team-card">
             <img
               src="./img/our-team/img4.jpg"
               width="270"
               height="260"
               alt="фотография члена команды 1"
             />
-            <h4 class="h-class">Игорь Демьяненко</h4>
+            <h4 class="our-team-names">Игорь Демьяненко</h4>
             <p>Product Designer</p>
           </li>
-          <li class="list-item">
+          <li class="our-team-card">
             <img
               src="./img/our-team/img5.jpg"
               width="270"
               height="260"
               alt="фотография члена команды 2"
             />
-            <h4 class="h-class">Ольга Репина</h4>
+            <h4 class="our-team-names">Ольга Репина</h4>
             <p>Frontend Developer</p>
           </li>
-          <li class="list-item">
+          <li class="our-team-card">
             <img
               src="./img/our-team/img6.jpg"
               width="270"
               height="260"
               alt="фотография члена команды 3"
             />
-            <h4 class="h-class">Frontend Developer</h4>
+            <h4 class="our-team-names">Николай Тарасов</h4>
             <p>Marketing</p>
           </li>
-          <li class="list-item">
+          <li class="our-team-card">
             <img
               src="./img/our-team/img7.jpg"
               width="270"
               height="260"
               alt="фотография члена команды 4"
             />
-            <h4 class="h-class">Михаил Ермаков</h4>
+            <h4 class="our-team-names">Михаил Ермаков</h4>
             <p>UI Designer</p>
           </li>
         </ul>
@@ -137,19 +137,23 @@
     </main>
 
     <footer class="footer">
-      <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="logo" href="./index.html">Web<span class="logo-color-footer">Studio</span></a>
       <address>
-        <ul class="address-foot">
+        <ul>
           <li>
-            <a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer"
+            <a
+              class="address-map"
+              href="https://bit.ly/3pXMvUd"
+              target="_blank"
+              rel="noopener noreferrer"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
           <li>
-            <a class="link" href="mailto:info@devstudio.com">info@example.com</a>
+            <a class="address" href="mailto:info@devstudio.com">info@example.com</a>
           </li>
           <li>
-            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="address" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
