--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
     <main class="main-portfolio">
       <section>
         <h1 class="unvis-title" lang="en">Portfolio</h1>
-        <nav>
+        <div class="buttons">
           <ul>
             <li><button class="portfolio-buttons" type="button">Все</button></li>
             <li><button class="portfolio-buttons" type="button">Веб-сайты</button></li>
@@ -40,7 +40,7 @@
             <li><button class="portfolio-buttons" type="button">Дизайн</button></li>
             <li><button class="portfolio-buttons" type="button">Маркетинг</button></li>
           </ul>
-        </nav>
+        </div>
         <ul class="portfolio-expamles">
           <li>
             <a class="main-portfolio-links" href="">
